syntax = "proto3";

package infraboard.keyauth.permission;
option go_package = "github.com/infraboard/keyauth/pkg/permission";

import "github.com/infraboard/mcube/pb/page/page.proto";

// QueryPermissionRequest 查询用户权限
message QueryPermissionRequest {
    // @gotags: json:"page"
   infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"namespace_id"
    string namespace_id = 2;
}

// QueryRoleRequest 查询用户权限
message QueryRoleRequest {
    // @gotags: json:"page"
   infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"namespace_id"
    string namespace_id = 2;
    // @gotags: json:"with_permission"
    bool with_permission = 3;
}

// CheckPermissionRequest todo
message CheckPermissionRequest {
    // @gotags: json:"page"
   infraboard.mcube.page.PageRequest page = 1;
    // @gotags: json:"namespace_id"
    string namespace_id = 2;
    // @gotags: json:"endpoint_id"
    string endpoint_id = 3;
    // @gotags: json:"service_id"
    string service_id = 4;
    // @gotags: json:"path"
    string path = 5;
}